# cmake-study

./: .gitignore  CMakeLists.txt  readme.md
MathFunctions/: Application.cpp  CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
src/: Main.cpp  TestConfig.h.in
